fix coming soon clipping onto next line

--- a/src/styles/cyberia-estates.css
+++ b/src/styles/cyberia-estates.css
@@ -103,6 +103,7 @@ button.estate-size:hover {
 a#mint-estate {
   pointer-events: none;
   opacity: 0.5;
+  display:block;
 }
 a#faqhome {
   border: none;
